# PizzaPriceMachineLearning

./: README.md  Untitled.ipynb  app.py  pizzas.csv  pyproject.toml
